--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,7 +10,13 @@
 <body>
     <div id="score">Score: 0</div>
     <div id="timer">Time: 20</div>
+    <button id="startButton">Start Game</button>
     <canvas id="gameCanvas" width="600" height="800"></canvas>
+    <div id="gameOver" style="display: none;">
+        <h1>Game Over!</h1>
+        <p id="finalScore"></p>
+        <button onclick="window.location.reload();">Play Again</button>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
