--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,7 +12,7 @@
     <button id="startButton">Start Game</button>
     <canvas id="gameCanvas" width="600" height="800"></canvas>
     <div id="gameOver" style="display: none;">
-        <h1>Game  overrrr good game btw !</h1>
+        <h1>Game Over!</h1>
         <p id="finalScore"></p>
         <button onclick="window.location.reload();">Play Again</button>
     </div>
