--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="score">Score: 0</div>
-    <div id="timer">Time: 20</div>
-    <button id="startButton">Start Game</button>
+    <div id="container">
+        <div id="score">Score: 0</div>
+        <div id="timer">Time: 20</div>
+        <button id="startButton">Start Game</button>
+    </div>
     <canvas id="gameCanvas" width="600" height="800"></canvas>
-    <div id="gameOver" style="display: none;">
+    <div id="gameOver">
         <h1>Game Over!</h1>
         <p id="finalScore"></p>
         <button onclick="window.location.reload();">Play Again</button>
